--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -249,8 +249,25 @@ header {
 
 .nav-list-mobile {
   max-width: $container-xl;
+  list-style: none;
   display: flex;
   flex-direction: column;
+
+  svg {
+    width: 36px;
+    height: 36px;
+
+    path {
+      stroke: $gray-7;
+      transition: 0.7s ease;
+    }
+
+    &:hover {
+      path {
+        stroke: $primary-normal;
+      }
+    }
+  }
 }
 
 .nav-link-mobile {
