--- a/css/partials/_animations.scss
+++ b/css/partials/_animations.scss
@@ -32,7 +32,7 @@ $height-card: 0.64 * $width-card;
     transform: rotateX(190deg) rotateY(10deg) rotateY(15deg);
   }
 }
-
+/*
 @keyframes change-bg-card {
   0%,
   49% {
@@ -45,7 +45,7 @@ $height-card: 0.64 * $width-card;
     background-size: cover;
   }
 }
-
+*/
 .icon-card-hero {
   position: absolute;
   z-index: 200;
@@ -80,6 +80,7 @@ $height-card: 0.64 * $width-card;
   }
 }
 
+/*
 @keyframes icons-hero {
   0% {
     transform: translate3d(0, 0, 0);
@@ -88,3 +89,4 @@ $height-card: 0.64 * $width-card;
     transform: translate3d(10px, -40px, 0);
   }
 }
+*/
