--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -180,3 +180,21 @@ $container-s: 540px;
   }
 }
 
+.list-item {
+  list-style: none;
+  position: relative;
+ 
+  padding: 8px 8px 8px 72px;
+  margin-bottom: 48px;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 64px;
+    height: 64px;
+  }
+}
+
